<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/filterButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_filter" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/labelCompany"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            android:gravity="center_vertical"
            android:text="@string/company_label"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle" />

        <TextView
            android:id="@+id/companyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_info"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/labelCompany" />

        <TextView
            android:id="@+id/labelLaunches"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/black"
            android:gravity="center_vertical"
            android:text="@string/launches_label"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/companyInfo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/launch_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            tools:listitem="@layout/launch_info_card" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            tools:text="erro" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>